# shexkell

./: LICENSE  README.md  Shexkell.cabal  stack.yaml  testConfigSchema.json
app/: CommandLine.hs  Main.hs
src/: Shexkell.hs
src/Shexkell/: Text.hs
src/Shexkell/Control/: DeepSeq.hs  Validation.hs
src/Shexkell/Data/: Common.hs  ShEx.hs  ShapeExpr.hs  ShapeMap.hs  TripleExpr.hs
src/Shexkell/Semantic/: Datatype.hs  Neighbourhood.hs  NodeConstraint.hs  Partition.hs  Shape.hs  Validation.hs
src/Shexkell/Text/Compact/: Common.hs  Control.hs  NodeConstraint.hs  PreParser.hs  ShexParser.hs
src/Shexkell/Text/JSON/: Common.hs  Control.hs  NodeConstraint.hs  ShexParser.hs
src/Shexkell/Text/RDF/: Literal.hs
src/Shexkell/Utils/: Either.hs
test/: Spec.hs
test/Shexkell/: SemanticTests.hs  TestSuite.hs
test/Shexkell/Semantic/: NeighbourhoodTest.hs
test/Shexkell/SemanticTests/: NeighbourhoodTest.hs  PartitionTest.hs
test/Shexkell/TestSuite/Data/: Types.hs
