name:                Shexkell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/weso/Shexkell#readme
license:             MIT
license-file:        LICENSE
author:              Sergio Franco García
maintainer:          sergioifg94@gmail.com
copyright:           2017 Sergio Franco García
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shexkell.Data.ShEx
                     , Shexkell.Data.Common
                     , Shexkell.Data.ShapeExpr
                     , Shexkell.Data.TripleExpr
                     , Shexkell.Control.Validation
                     , Shexkell.Control.DeepSeq
                     , Shexkell.Semantic.Partition
                     , Shexkell.Semantic.Validation
                     , Shexkell.Semantic.NodeConstraint
                     , Shexkell.Semantic.Shape
                     , Shexkell.Semantic.Neighbourhood
                     , Shexkell.Semantic.Datatype

                     , Shexkell.Text.Compact.ShexParser
                     , Shexkell.Text.Compact.NodeConstraint
                     , Shexkell.Text.Compact.Common

                     , Shexkell.Text.JSON.ShexParser
                     , Shexkell.Text.JSON.NodeConstraint
                     , Shexkell.Text.JSON.Common

                     , Shexkell
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , rdf4h >= 3.0.1
                     , containers >= 0.5.7.1
                     , composition >= 1.0.2.1
                     , deepseq >= 1.4.2.0
                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
                     , hxt-regex-xmlschema >= 9.2.0.3
                     , aeson 
                     , scientific
  default-language:    Haskell2010

executable Shexkell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Shexkell
                     , aeson 
  default-language:    Haskell2010

test-suite Shexkell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Shexkell.SemanticTests.NeighbourhoodTest
                     , Shexkell.SemanticTests.PartitionTest
                     , Shexkell.SemanticTests
  main-is:             Spec.hs
  build-depends:       base
                     , Shexkell
                     , rdf4h >= 3.0.1
                     , containers >= 0.5.7.1
                     , HUnit >= 1.5.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/weso/shexkell
